<resources>
    <string name="app_name">School</string>
    <string name="strN1">Grade 1</string>
    <string name="strN2">Grade 2</string>
    <string name="strCalc">Calculate</string>
    <string name="strMedia">Avarage</string>
    <string name="strStatus">Status</string>
    <string name="strZero" translatable="false">0</string>
    <string name="strAproved">Aproved</string>
    <string name="strRec">Retake</string>
    <string name="strRip">Disapproved</string>
    <string name="strMsgAp">Congratulations!</string>
    <string name="strMsgRc">Study More! It\'s still possible</string>
    <string name="strMsgRp">Please try again next year</string>
    <string name="msgErro">Type a number!</string>
    <string name="situation">Situation</string>
</resources>