<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strMedia"
        />

    <TextView
        android:id="@+id/txtM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strZero"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strStatus" />

    <TextView
        android:id="@+id/txtSit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strRip"
        android:textSize="30sp" />

    <include layout="@layout/image_situation" />

</LinearLayout>